@@ -1,5 +1,6 @@
 Changes for 1.5:
 
+ - [DEV-60] added availability of setting hosts view style in overview (Artem)
  - [DEV-53] added different style for dependent triggers in "Status of triggers" (Artem)
  - [DEV-62] added availability to select all hosts in "Availability report" (Artem)
  - [DEV-75] Empty command result window (Sasha)
